--- a/frontend/src/pages/productType/ProductType.css
+++ b/frontend/src/pages/productType/ProductType.css
@@ -43,16 +43,19 @@
 .typeTop{
     padding:8px;
     width:100%;
-    background-color: #111;
-    color: white;
-    font-size: 20px;
-    padding-left: 25px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    height: 50px;
+    color: black;
+    font-size: 18px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: 25px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    border-bottom: 2px solid #d4d4d4;
+    margin-bottom: 4px;
+    width: 95%;
+    text-transform: capitalize;
+    font-weight: bolder;
 }
 
 .commonClass{
@@ -62,7 +65,7 @@
 
 .rightTop{
     display: flex;
-    margin-right:20px;
+    margin-right:0px;
 }
 
 .form-select{
